tests/snapshots/integration__integration_tests__switch__switch_base_without_create.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--base"
    - main
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpMJMcDh/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🟡 [33m--base flag is only used with --create, ignoring[0m
✅ [32mSwitched to worktree for [0m[1m[32mmain[0m[32m at [0m[1m[REPO][0m

To enable automatic cd, run: wt config shell

----- stderr -----
